--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -1,8 +1,4 @@
 1. 调式中各音的技术和专有名称
 
-	|表头1|表头12|
-	|---------|--------|
-	|表格单元|表格单元 |
-	|表格单元|表格单元|
-2. 
+	![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-1.jpg)
 2. 
