图片:音程性质

--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -1,4 +1,17 @@
-1. 调式中各音的技术和专有名称
+1. **调式中各音的级数和专有名称**[^1]
 
 	![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-1.jpg)
-2. 
+2. **音程**
+	1. 旋律音程：先后出现的两个音
+	2. 和声音程：同时出现的两个音
+	3. 音程中低的音称为“根音”，高的音成为“冠音”
+	4. 音程性质
+		![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-2.jpg)
+	5. 
+3. 
+
+
+
+
+**参考书目**
+[^1]: 《吉他自学三月通》刘传主编
