--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -7,7 +7,17 @@
 	3. 音程中低的音称为“根音”，高的音成为“冠音”
 	4. 音程性质
 		![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-2.jpg)
-	5. 
+	5. 音程转位：将音程中的根音移高八度，至于冠音之上；或将冠音移低八度至于根音之下
+	6. 单音程：一个八度内的音程，比如：1--5，5--上加一点2 7--上加一点4
+	7. 复音程：超过一个八度以上的音程，比如：2--上加一点3
+	8. 自然音程：自然调式中各音之间的形成的音程。如：1--3
+	9. 变化音程：即由自然音程中的某音作半音变化，音程的级数不变而音数增加/减少。变化音程又分为：增音程，减音程。另外还有倍增，倍减。
+		1. 增音程：音程的度数不变而音数增加。如：1--#3，4--#6
+		2. 减音程：音程的度数不变而音数减少。如：3--b5，#7--上加一点2
+	6. 极完全协和音程：纯一度，纯八度，声音完全或几乎完全合一
+	7. 完全协和音程：纯四度，纯五度，声音相当融合
+	8. 不完全协和音程：大三度，声音不很融合
+	9. 不协和音程：听上去感到别扭，不融合的音程，比如大二度，小二度，大七度，小七度，以及所有增音程，减音程，各种倍增，倍减音程
 3. 
 
 
