增加和弦部分

--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -18,7 +18,21 @@
 	7. 完全协和音程：纯四度，纯五度，声音相当融合
 	8. 不完全协和音程：大三度，声音不很融合
 	9. 不协和音程：听上去感到别扭，不融合的音程，比如大二度，小二度，大七度，小七度，以及所有增音程，减音程，各种倍增，倍减音程
-3. 
+3. **和弦**
+	1. 三和弦，按三度音程叠置起来的三个音构成的和弦。分为：
+		1. 大三和弦 = 大三度 + 小三度，如A，D，E和弦
+		2. 小三和弦 = 小三度 + 大三度，如Am，Dm，Em和弦
+		3. 增三和弦 = 大三度 + 大三度，如Caug，D+和弦
+		4. 减三和弦 = 小三度 + 小三度，如Adim，B_，D°和弦
+	2. 七和弦，由四个按三度音程叠置起来的音组成，即在三和弦上方再叠置一个三度音程。
+	3. 属七和弦，由一个大三度加一个小三度，再加一个小三度构成
+	4. 音响特点
+		1. 大三和弦：音响协和，色彩明亮
+		2. 小三和弦：音响协和，色彩暗淡
+		3. 增三和弦：不协和，有扩张感
+		4. 减三和弦：不协和，有收缩感
+		5. 属七和弦：不协和，有强烈倾向主和弦的特点
+4. 
 
 
 
