添加节拍,节奏,力度符号

--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -32,9 +32,17 @@
 		3. 增三和弦：不协和，有扩张感
 		4. 减三和弦：不协和，有收缩感
 		5. 属七和弦：不协和，有强烈倾向主和弦的特点
-4. 
-
-
+4. **节奏与节拍**
+	1. 节奏:是在旋律进行过程中所形成的乐音之间有组织的长短关系。
+	2. 节拍:是指在相同的时间片段（小节）内,重音与非重音的循环反复,表现了乐音间的强弱关系。
+	3. 拍子:标示在相同的时间片段内单位派出显得数量。从一个强拍到下一个强拍之间的部分称为“小节”，并且标在强拍的“小节线”加以区分。
+	4. 拍号：是表示单位拍数量的记号。拍号用分数表示，分子表示单位拍的数量，分母表示单位拍的时值。
+	5. 单拍子：每小节有两拍或三拍，并且只有一个强拍的拍子。比如2/4，3/4，2/8，3/8。
+	6. 复拍子：由若干组单拍子结合成序列，并含有次强拍的拍子。比如：4/4，4/8，6/8。
+	7. 自由拍子：又叫散拍子。强弱位置相对不固定，音符的时值长短也比较随意。
+	8. 节奏型：和弦中的音，按照一定的方式有规律的运动，成为相对固定的模式，用于音乐的伴奏之中，称作“节奏型”。
+5. **力度符号**
+	![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-3.jpg) 
 
 
 **参考书目**
