音程转位，音节稳定性等

--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -1,13 +1,24 @@
-1. **调式中各音的级数和专有名称**[^1]
+1. **调式**
+	1. 欣赏音乐时，在一些段落的结尾处，都有一种类似说话停顿时相对平静的感觉，这种相对平静在音乐中叫做**稳定**。处于稳定位置上的音叫做**稳定音**
+	2. 从平静（稳定音或和弦）到运动（不稳定音或和弦）再回到平静（稳定音或和弦）的过程叫**解决**
+	3. 处于终止处这个最稳定的音称为**主音**。
+	4. 组成音乐的一些音以注音为中心，按照他们彼此之间高低及稳定与不稳定等关系，构成一个体系，这个体系叫做**调式**。
+	5. 调式中的音从主音到主音，按照阴的高低顺序排列起来叫做**音阶**。当音阶从低向高进行时成为**上行**，当音阶从高向低进行时成为**下行**。
+	6. **大调式**是一种以1（Do）为主音的，由七个音构成的调式。特点是：色彩明朗热烈。
+	7. **小调式**是一种以6（La）为主音的，由七个音构成的调式。特点是：色彩暗淡忧伤。
+	8. I,III,V级音相对稳定，而II,IV,VI,VII级音相对不稳定，并以二度关系倾向于稳定者。
+	![音阶稳定性](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/音阶稳定性.png)
+2. **调式中各音的级数和专有名称**[^1]
 
 	![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-1.jpg)
-2. **音程**
+3. **音程**
+	0. **音程**就是两个音之间音高的距离。音程的单位为**度数**。音程中全音和半音的数目叫做**音数** 	
 	1. 旋律音程：先后出现的两个音
 	2. 和声音程：同时出现的两个音
 	3. 音程中低的音称为“根音”，高的音成为“冠音”
 	4. 音程性质
 		![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-2.jpg)
-	5. 音程转位：将音程中的根音移高八度，至于冠音之上；或将冠音移低八度至于根音之下
+	5. 音程转位：将音程中的根音移高八度，至于冠音之上；或将冠音移低八度至于根音之下。音程转位后的读书可以用转位音程公式算出：9减去原音程的读书，便得到转位后音程的度数。转位后，除纯音程，其他音程的性质都会变。大音程转位后变成小音程。小音程转位后变成大音程。增音程转位后变成减音程，减音程转位后变成增音程。纯音程转位后仍为纯音程。
 	6. 单音程：一个八度内的音程，比如：1--5，5--上加一点2 7--上加一点4
 	7. 复音程：超过一个八度以上的音程，比如：2--上加一点3
 	8. 自然音程：自然调式中各音之间的形成的音程。如：1--3
@@ -16,9 +27,10 @@
 		2. 减音程：音程的度数不变而音数减少。如：3--b5，#7--上加一点2
 	6. 极完全协和音程：纯一度，纯八度，声音完全或几乎完全合一
 	7. 完全协和音程：纯四度，纯五度，声音相当融合
-	8. 不完全协和音程：大三度，声音不很融合
+	8. 不完全协和音程：大三度，小三度，大六度，小六度，声音不很融合
 	9. 不协和音程：听上去感到别扭，不融合的音程，比如大二度，小二度，大七度，小七度，以及所有增音程，减音程，各种倍增，倍减音程
-3. **和弦**
+	10. 转位音程的协和性不变，因为某一音只是移高或降低了八度，互为八度的两个音音名是相同的，所以转位后音程协和性不变，比如纯四度是完全协和音程，转位后变成纯五度，仍是完全协和音程。
+4. **和弦**
 	1. 三和弦，按三度音程叠置起来的三个音构成的和弦。分为：
 		1. 大三和弦 = 大三度 + 小三度，如A，D，E和弦
 		2. 小三和弦 = 小三度 + 大三度，如Am，Dm，Em和弦
@@ -32,7 +44,7 @@
 		3. 增三和弦：不协和，有扩张感
 		4. 减三和弦：不协和，有收缩感
 		5. 属七和弦：不协和，有强烈倾向主和弦的特点
-4. **节奏与节拍**
+5. **节奏与节拍**
 	1. 节奏:是在旋律进行过程中所形成的乐音之间有组织的长短关系。
 	2. 节拍:是指在相同的时间片段（小节）内,重音与非重音的循环反复,表现了乐音间的强弱关系。
 	3. 拍子:标示在相同的时间片段内单位派出显得数量。从一个强拍到下一个强拍之间的部分称为“小节”，并且标在强拍的“小节线”加以区分。
@@ -41,8 +53,12 @@
 	6. 复拍子：由若干组单拍子结合成序列，并含有次强拍的拍子。比如：4/4，4/8，6/8。
 	7. 自由拍子：又叫散拍子。强弱位置相对不固定，音符的时值长短也比较随意。
 	8. 节奏型：和弦中的音，按照一定的方式有规律的运动，成为相对固定的模式，用于音乐的伴奏之中，称作“节奏型”。
-5. **力度符号**
+6. **力度符号**
 	![调式中各音的技术和专有名称](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%9F%BA%E6%9C%AC%E4%B9%90%E7%90%86-%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0-3.jpg) 
+7. **六线谱符号**
+    ![六线谱符号](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%85%AD%E7%BA%BF%E8%B0%B1%E7%AC%A6%E5%8F%B7.png)
+  
+8.    
 
 
 **参考书目**
