大小调正三和弦及调式各音级的倾向性

--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -6,7 +6,8 @@
 	5. 调式中的音从主音到主音，按照阴的高低顺序排列起来叫做**音阶**。当音阶从低向高进行时成为**上行**，当音阶从高向低进行时成为**下行**。
 	6. **大调式**是一种以1（Do）为主音的，由七个音构成的调式。特点是：色彩明朗热烈。
 	7. **小调式**是一种以6（La）为主音的，由七个音构成的调式。特点是：色彩暗淡忧伤。
-	8. I,III,V级音相对稳定，而II,IV,VI,VII级音相对不稳定，并以二度关系倾向于稳定者。
+	8. 调式音阶中I,IV,V级音在音阶中的作用最为重要，它们构成了音乐的旋律框架，I音经常出现在音乐作品的开始和终止位置，作为旋律的起点和终点，所以被称为调式的**主音**。V级树荫是主音上方纯五度的音，常作为旋律段落处的不完全终止音，在音乐中的重要程度仅次于主音。主音下方纯五度的音为IV级下属音，即属音下方大二度的音，其重要性仅次于属音，常出现在旋律的高潮部分，与属音一起从不同侧面支持，巩固主音的调式中心地位。鉴于主音，属音，下属音在音乐表现中的重要意义，又称它们为调式音阶的**正音级**，其他各音级称为**副音级**
+	9. I,III,V级音相对稳定，而II,IV,VI,VII级音相对不稳定，并以二度关系倾向于稳定者。
 	![音阶稳定性](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/音阶稳定性.png)
 	
 2. **调式中各音的级数和专有名称**[^1]
@@ -45,6 +46,17 @@
 		3. 增三和弦：不协和，有扩张感
 		4. 减三和弦：不协和，有收缩感
 		5. 属七和弦：不协和，有强烈倾向主和弦的特点
+	5. 大调正三和弦
+		![大调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/大调正三和弦.png) 
+		1. 大调正三和弦都是大三和弦
+		2. 大调正三和弦色彩明亮
+		3. 大调正三和弦包括了大调音阶中的各级音，已经具备了为大调音阶中各音伴奏的可能性。
+	6. 小调正三和弦 
+		![小调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/小调正三和弦.png) 
+		1. 小调正三和弦都是小三和弦
+		2. 小调正三和弦色彩柔和，暗淡，显示小调的特性
+		3. 小调正三和弦包括了小调音阶中的各级音，已过经具备了为大调音阶中各音伴奏的可能性。
+
 5. **节奏与节拍**
 	1. 节奏:是在旋律进行过程中所形成的乐音之间有组织的长短关系。
 	2. 节拍:是指在相同的时间片段（小节）内,重音与非重音的循环反复,表现了乐音间的强弱关系。
