--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -46,16 +46,6 @@
 		3. 增三和弦：不协和，有扩张感
 		4. 减三和弦：不协和，有收缩感
 		5. 属七和弦：不协和，有强烈倾向主和弦的特点
-	5. 大调正三和弦
-		![大调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/大调正三和弦.png) 
-		1. 大调正三和弦都是大三和弦
-		2. 大调正三和弦色彩明亮
-		3. 大调正三和弦包括了大调音阶中的各级音，已经具备了为大调音阶中各音伴奏的可能性。
-	6. 小调正三和弦 
-		![小调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/小调正三和弦.png) 
-		1. 小调正三和弦都是小三和弦
-		2. 小调正三和弦色彩柔和，暗淡，显示小调的特性
-		3. 小调正三和弦包括了小调音阶中的各级音，已过经具备了为大调音阶中各音伴奏的可能性。
 
 5. **节奏与节拍**
 	1. 节奏:是在旋律进行过程中所形成的乐音之间有组织的长短关系。
@@ -71,7 +61,35 @@
 7. **六线谱符号**
     ![六线谱符号](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/%E5%85%AD%E7%BA%BF%E8%B0%B1%E7%AC%A6%E5%8F%B7.png)
   
-8.    
+8. **和声** 
+	1. 大调正三和弦
+		![大调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/大调正三和弦.png) 
+		1. 大调正三和弦都是大三和弦
+		2. 大调正三和弦色彩明亮
+		3. 大调正三和弦包括了大调音阶中的各级音，已经具备了为大调音阶中各音伴奏的可能性。
+	2. 小调正三和弦 
+		![小调正三和弦](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/小调正三和弦.png) 
+		1. 小调正三和弦都是小三和弦
+		2. 小调正三和弦色彩柔和，暗淡，显示小调的特性
+		3. 小调正三和弦包括了小调音阶中的各级音，已过经具备了为大调音阶中各音伴奏的可能性。
+	3. 主和弦是**最稳定的**，属和弦中各和弦音都对主和弦的构成音有较强的倾向性，是**最不稳定的和弦**，下属和弦也是不稳定的和弦，但次于属和弦。不稳定和弦进行到稳定和弦时会使人们感到听觉的圆满。
+	4. 虽然正三和弦已经包括了调式中的七个音，是和声的主体框架，但一首音乐仅用正三和弦效果是单调的，因此有必要加入副三和弦来丰富和声效果。
+	5. 对比上面和弦组成图可以发现，II，VI级和弦各与IV级下属和弦有2个共同音，因此他们具有下属和弦的功能和作用，II，IV，VI一起构成**下属和声功能组**。VI级和弦出了具有下属和声功能外，它又与I级主和弦有两个共同音，因此它又具有主和弦的功能与作用，是一个有双重属性的和弦，使用时根据调式来判断它的性质。调式的III，VII级和弦与V级属和弦有2个共同音，因此具有属和弦的功能和作用，III，V，VII构成了**属和声功能组**。另外III级和弦虽然与I级主和弦有2个共同音，但是它含有一个极不稳定的导音（7），影响了和弦的稳定性，所以只属于**属功能组**
+	![和声功能图示.png](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/和声功能图示.png)
+	6. 功能替代：
+		1. 各功能组中的和弦可以相互替代，形成和声色彩的变化
+		2. 同功能组的和弦可以连续使用，常见形式为：同组和弦连续下三度进行，如：VI，IV，II和VII，V，III 
+	7. 正三和弦的进行方向
+		1. I级和弦可以进行到各级和弦
+		2. 下属和弦除VIm和VIIdim外，可以进行到其他和弦。如IV->V,IV->IIm->V7,IV->IIIm->IIm->(VIm)
+		3. 属和弦（属七和弦）主要指向主和弦，也可以进行到IIm7(V7->IIm7->V7)或IIIm(V7->IIIm->VIm)
+	8. 副三和弦的进行方向
+		1. 进行到下五度和弦，如IIm->V,IIm->VIm,VIm->IIm,VIIdim->IIIm
+		2. 进行到上、下二度和弦，如：IIm->IIIm(I,不常用),IIm->IV(IIm),VIm->V(VII,不常用),VIIdim->I(VIm，不常用)
+	9. 终止式
+		1. 半终止，主要用于乐曲发展过程中的结束，也称为中间终止。用于乐句的停顿。旋律一般结束语主和弦的三度音或五度音上，典型的和声语汇是结束于调式的属和弦上。 ![半终止式](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/半终止式.png)
+		2. 完全终止式，主要用于全曲的结束，也称为结束终止式。旋律结束于主和弦的根音上，已明确调性。典型的的和声语汇是使用属和弦（属七和弦）到原位主和弦的进行。即V-I或V7-I，此外，终止式采用下属和弦到主和弦（IV-I）的进行也比较常见。 ![终止式](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/终止式.png)
+	
 
 
 **参考书目**
