--- a/uncategorized/基本乐理 读书笔记.md
+++ b/uncategorized/基本乐理 读书笔记.md
@@ -89,7 +89,13 @@
 	9. 终止式
 		1. 半终止，主要用于乐曲发展过程中的结束，也称为中间终止。用于乐句的停顿。旋律一般结束语主和弦的三度音或五度音上，典型的和声语汇是结束于调式的属和弦上。 ![半终止式](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/半终止式.png)
 		2. 完全终止式，主要用于全曲的结束，也称为结束终止式。旋律结束于主和弦的根音上，已明确调性。典型的的和声语汇是使用属和弦（属七和弦）到原位主和弦的进行。即V-I或V7-I，此外，终止式采用下属和弦到主和弦（IV-I）的进行也比较常见。 ![终止式](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/终止式.png)
-	
+	10. 和弦的基本连接模式
+		1. 任何一个调中，以调式音阶的七个自然音为根音，都可以构成7个不带变化音的三和弦或七和弦。这7各和弦相互连接时，便会出现根音相距二度，三度，四度，五度，六度，七度的两个和弦相连接的情况。如果将根音相距5，6，7度的两个和弦的进行向互换，如I-V换为V-I，是吉祥还是根音相距4，3，2度的和弦连接。因此同一调中和弦的连接都可归纳为上行或下行四度，三度，二度的和弦连接。
+		2. 二度连接，根音相距二度的和弦没有共同音，和声各声部之间缺乏联系（调式的下属和弦进行到属和弦除外），如同两个不同的单词，和声力度较强烈。连接时各声部应少用单纯的同向进行，多采用重复根音，低音声部反向进行，其他声部同向进行的连接。![二度连接](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/二度连接.png)
+		3. 三度连接，根音相距三度的三和弦有2个共同音，七和弦有3个共同音，各声部之间联系较强，如同两个含义相近的同义词，和声力度较弱，连接时可以把共同音保持在同一声部。根音三度连接时，上行与下行又有一些区别：根音上行三度时，由于后面和弦的根音已经在前面的和弦中出现，因此和声力度最弱；根音下行三度时则没有这个现象，和声力度比前者略强。![三度连接](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/三度连接.png)
+		4. 四度连接，根音相距四度的三和弦有1个共同音和两个不同音。七和弦各有2各相同音和不同音，其连接的新鲜感与联系性相对平衡自然，具有良好的音响效果。连接时共同音应尽量保持在同一声部，如共同音不保持在同一声部会造成某几个声部的同向进行，并有音程跳出，这就要求个别声部与它们成反向进行以取得平衡，一般采取低声部反向进行的手法。如：![四度连接](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/四度连接.png)
+		5. 从上面的分析可知：在和弦的各种连接方式中，根音相距四度（尤其上行四度）的两个和弦前后连接时，能够获得自然、良好的音响效果。特别是以调式主和弦为中心的上方四度与下方四度的I(T)-IV(S)-V(D)三个和弦的连接，组成了类似于严重能表达完整意义的句型，既保持了和声各声部之间的联系性（共同音），又包含了不稳定音（导音）向稳定音（主音）的解决，成为大小调音乐体系中最典型，最基本的和声语法模式。
+	11. 各种和弦词汇及色彩分类，和谐度分类![和弦词汇.png](https://raw.githubusercontent.com/YaoHuiJi/Blog/master/images/和弦词汇.png)
 
 
 **参考书目**
